--- a/app/app.css
+++ b/app/app.css
@@ -56,11 +56,9 @@
     rgba(3, 3, 3, 0.54) -3.66%,
     rgba(6, 6, 6, 0) 45.57%
   );
-  --shadow-100:
-    0px 1px 3px 0px rgba(16, 24, 40, 0.1),
+  --shadow-100: 0px 1px 3px 0px rgba(16, 24, 40, 0.1),
     0px 1px 2px 0px rgba(16, 24, 40, 0.06);
-  --shadow-200:
-    0px 12px 16px -4px rgba(16, 24, 40, 0.1),
+  --shadow-200: 0px 12px 16px -4px rgba(16, 24, 40, 0.1),
     0px 4px 20px -2px rgba(16, 24, 40, 0.2);
   --shadow-300: 0px 2px 30px 0px rgba(0, 0, 0, 0.05);
   --shadow-400: 0px 2px 6px 0px rgba(13, 10, 44, 0.08);
@@ -277,7 +275,13 @@
     }
   }
   .link-logo {
-    @apply flex items-center gap-1.5 py-10 border-b border-light-100;
+    @apply flex items-center gap-1.5;
+    h1 {
+      @apply text-base md:text-2xl font-bold text-dark-100;
+    }
+  }
+  .link-logo-dashboard {
+    @apply flex items-center gap-1.5 py-10;
     h1 {
       @apply text-base md:text-2xl font-bold text-dark-100;
     }
@@ -392,10 +396,10 @@
 
 @layer utilities {
   .wrapper {
-    @apply w-full max-w-7xl mx-auto px-4 lg:px-8;
+    @apply w-full max-w-7xl mx-auto px-4;
   }
   .wrapper-md {
-    @apply w-full max-w-3xl px-4 lg:px-8 mx-auto;
+    @apply w-full max-w-3xl px-4 lg:px-6 mx-auto;
   }
   .flex-center {
     @apply flex justify-center items-center;
@@ -517,8 +521,7 @@ body {
   border-radius: 6px;
   border: 1px solid #f0fef9;
   background: #ffffff;
-  box-shadow:
-    0px 0px 3px 0px rgba(16, 24, 40, 0.1),
+  box-shadow: 0px 0px 3px 0px rgba(16, 24, 40, 0.1),
     0px 0px 2px 0px rgba(16, 24, 40, 0.06);
   height: 40px;
 }
@@ -527,8 +530,7 @@ body {
   border-radius: 8px;
   border: 1px solid #eaecf0;
   background: #fff;
-  box-shadow:
-    0px 12px 16px -4px rgba(16, 24, 40, 0.1),
+  box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.1),
     0px 4px 20px -2px rgba(16, 24, 40, 0.2);
 }
 .e-dropdown-popup ul .e-item {
